Made skill description auto height and enable transforms to solve z-index problems

--- a/client/main.less
+++ b/client/main.less
@@ -76,7 +76,7 @@ body {
     }
 }
 [role=main]{
-  transition: background-image 150ms ease-out;
+  transition: background-image 1s ease-out;
 }
 .content{
   transition: all 100ms ease-in;
@@ -254,6 +254,7 @@ a{
   max-width: 800px;
   padding:2rem;
   margin:1rem auto auto auto;
+  height:auto !important;
   position: relative;
   min-height:auto !important;
   background-color: fade(black, 45%);
